--- a/.github/workflows/dependent-jobs.yml
+++ b/.github/workflows/dependent-jobs.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo "Job 2 successfully runs"
 
   job3:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: [job1, job2]
     steps:
       - name: Job 3
