--- a/.github/workflows/dependent-jobs.yml
+++ b/.github/workflows/dependent-jobs.yml
@@ -25,4 +25,4 @@ jobs:
         shell: cmd
         run: echo "Job 3 successfully runs"
       - name: Log Runner
-        run: echo "Runner: ${{ toJson(runner) }}"
+        run: 'echo "Runner: ${{ toJson(runner) }}"'
